# ChangeLog for x11-wm/enlightenment
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2009; Andrian Nord <nightnord@niifaq.ru> enlightenment-9999.ebuild:
  Style fixes and migration from built_with_use to EAPI=2

  29 Apr 2009; Andrian Nord <nightnord@niifaq.ru> enlightenment-9999.ebuild:
  Revert vapier's "fix" about exchange. Switching the whole conf_theme module isn't a good idea.
  That's a upstream bug, and must be fixed by upstream. Untill that we'll use automagick.

  22 Dec 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment-0.16.999.050.ebuild, enlightenment-9999.ebuild:
  Slotting enlightenment

  30 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  +enlightenment-0.16.999.050.ebuild:
  Version bump.