@@ -1,3 +1,0 @@
-EBUILD e_modules-systray-9999.ebuild 354 RMD160 e78763a1af8f4910b27f7f96ef7780618afb5623 SHA1 f4283111f489a3014bbba6a6e9ace99ddd8b0285 SHA256 94cddf5c8645e3f1279dc304ab4dccdee35a7cb4ab586ce41b59cc5d384bedac
-MISC ChangeLog 427 RMD160 890723aa8b9362c42493fbee07708602ae4fd63d SHA1 6d0d2543b7b039f257c25bb5ba16a894df0e33de SHA256 25a73cbf7b3a843e12a6d69f77d0c28b34a1681ba4316230aa57c35b7ff8a604
-MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
