@@ -1,3 +1,3 @@
-EBUILD enlightenment-9999.ebuild 818 RMD160 2699142a8c45af2db592d329c4a3bbdfe753d7dd SHA1 d13edc799a058407cb5ad9f4b5daf1938ad4b955 SHA256 7872d7fad8e07086aee7d422566148cff3117ccc99c1b7a4faaf2aefa31bde46
-MISC ChangeLog 775 RMD160 e6ee850d74743e5b0f393a96ca38cbf4c913a15f SHA1 67e75613f89ed732c2bac62d84f78300fac673ba SHA256 077ce892739797ff19be25266c168ce2db70e548729f7809db202ceeddf8d919
+EBUILD enlightenment-9999.ebuild 787 RMD160 ee6f53934cddd6fd573399fb95ca08e016302892 SHA1 1452208d398b5577aa9ed3bb784417dbe2addca5 SHA256 50936854ee8103b4c2663eab52e2513717df5b96f0595170a044d8365219ee2b
+MISC ChangeLog 913 RMD160 7d53df6e49acc429c8b46eaa5161b62d2aa84f3d SHA1 05e2e16034644e2847772e8ff058d28f311ecdb5 SHA256 f89370218d9acd3913bd9a07c0ce2d8136c539f58562761599a4bfa1fd22bb28
 MISC metadata.xml 372 RMD160 4fd59272d832af726a9beb2966bcafe317c7b976 SHA1 eebeb115de7ea95da5ccaeb29f438f92f09434d4 SHA256 6ff74234215c5e69a2652701f65c94720978c46e22389a881bf3a48f7256bed9
