@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2009; Andrian Nord <NightNord@niifaq.ru> enlightenment-9999.ebuild:
+  Systray blocker removed, as systray was removed from tree
+
   03 May 2009; Andrian Nord <nightnord@niifaq.ru> enlightenment-9999.ebuild:
   Style fixes and migration from built_with_use to EAPI=2
 
